--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -7,7 +7,7 @@ layout: default
     <div class="row">
       <div class="col">
         <h2>{{ page.title }}</h2>
-        <p><strong>Date: {{ page.date | date: "%m/%d/%y" }}</strong></p>
+        <p><strong>Posted On: {{ page.date | date: "%m/%d/%y" }}</strong></p>
 
         {% if page.video_content == true %}
           <div class="text-center">
