Add margin to the bottom of "View All News" button-link.

--- a/_includes/latest-news-widget.html
+++ b/_includes/latest-news-widget.html
@@ -145,7 +145,7 @@
 
           </ol>
           <div class="text-center">
-            <a href="{{ page.baseurl }}news/" class="btn btn-primary buttons__btn-margin-top">View All News</a>
+            <a href="{{ page.baseurl }}news/" class="btn btn-primary buttons__btn-margin-top mb-3">View All News</a>
           </div>
         </section>
       </div>
