Fix button modal-button/share-button alignment issues.

--- a/assets/scss/1-base/_buttons.scss
+++ b/assets/scss/1-base/_buttons.scss
@@ -23,7 +23,8 @@
 .buttons__btn-margin-top {
   margin-top: 20px;
   &--sm {
-    margin-top: 10px;
+    margin-bottom: 5px;
+    margin-top: 5px;
   }
 }
 
