--- a/_includes/timeline.html
+++ b/_includes/timeline.html
@@ -1,1 +1,1 @@
-<a data-tweet-limit="5" class="twitter-timeline" href="https://twitter.com/KCCedu?ref_src=twsrc%5Etfw">Tweets by KCCedu</a> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
+<a data-tweet-limit="5" class="twitter-timeline" href="https://twitter.com/KCCedu?ref_src=twsrc%5Etfw">Tweets by KCCedu</a>
