--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -6,7 +6,7 @@ layout: default
   <div class="container">
     <div class="row">
       <div class="col">
-        <h2>{{ page.title }}</h2>
+        <h3 class="typography__h3">{{ page.title }}</h3>
         <p><strong>Posted On: {{ page.date | date: "%m/%d/%y" }}</strong></p>
 
         {% if page.video_content == true %}
