--- a/_includes/latest-news-modal.html
+++ b/_includes/latest-news-modal.html
@@ -12,7 +12,7 @@
       {% for post in current_posts limit: 4 %}
         {% if post.video_content == true %}
           <!--  Video content news item modal{{ forloop.index }}  -->
-          <div class="modal fade" id="videoModal{{ forloop.index }}" tabindex="-1" role="dialog" aria-labelledby="exampleModalCenterTitle" aria-hidden="true">
+          <div class="modal fade" id="videoModal{{ forloop.index }}" data-video="{{ post.video_link }}" tabindex="-1" role="dialog" aria-labelledby="title{{ forloop.index }}" aria-hidden="true">
             <div class="modal-dialog modal-dialog-centered modal-lg" role="document">
               <div class="modal-content">
                 <div class="modal-header">
@@ -24,7 +24,7 @@
                   <div class="positioning__iframe-wrapper">
                     <iframe class="js-yt-frame" id="iframe{{ forloop.index }}" data-theVideo="https://www.youtube.com/embed/{{ post.video_link | remove: "https://youtu.be/" }}" width="720" height="405" src="" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
                   </div><br>
-                  <h4 class="news__heading">{{ post.title }}</h4>
+                  <h4 id="title{{ forloop.index }}" class="news__heading">{{ post.title }}</h4>
                   <h5 class="news__sub-heading news__sub-heading--spacing"> <span class="news__date">Posted On: {{ post.date | date: "%m/%d/%y" }} </span></h5>
                   <p class="news__paragraph">{{ post.content }}</p>
                 </div>
@@ -39,7 +39,7 @@
           </div>
         {% else %}
           <!--  News item modal{{ forloop.index }}  -->
-          <div class="modal fade" id="modal{{ forloop.index }}" tabindex="-1" role="dialog" aria-labelledby="exampleModalCenterTitle" aria-hidden="true">
+          <div class="modal fade" id="modal{{ forloop.index }}" tabindex="-1" role="dialog" aria-labelledby="title{{ forloop.index }}" aria-hidden="true">
             <div class="modal-dialog modal-dialog-centered modal-lg" role="document">
               <div class="modal-content">
                 <div class="modal-header">
@@ -48,7 +48,7 @@
                   </button>
                 </div>
                 <div class="modal-body">
-                  <h4 class="news__heading">{{ post.title }}</h4>
+                  <h4 id="title{{ forloop.index }}" class="news__heading">{{ post.title }}</h4>
                   <h5 class="news__sub-heading news__sub-heading--spacing"> <span class="news__date">Posted On: {{ post.date | date: "%m/%d/%y" }} </span></h5>
                   <p class="news__paragraph">{{ post.content }}</p>
 
