--- a/_includes/latest-news-widget.html
+++ b/_includes/latest-news-widget.html
@@ -18,7 +18,7 @@
 
                 {% if forloop.first == true %}
                   {% if post.video_content == true %}
-                    <a data-frame="iframe" data-theVideo="https://www.youtube.com/embed/{{ post.video_link | remove: "https://youtu.be/" }}" data-toggle="modal" id="jsNewsLink{{ forloop.index }}" class="latest-news-widget__feature latest-news-widget__feature--image latest-news-widget__feature--play-hover js-hp-feature" data-target="#videoModal{{ forloop.index }}" href="#" tabindex="-1" aira-hidden="false">
+                    <a data-frame="iframe" data-video="https://www.youtube.com/embed/{{ post.video_link | remove: "https://youtu.be/" }}" data-toggle="modal" id="jsNewsLink{{ forloop.index }}" class="newsHeader-video-link latest-news-widget__feature latest-news-widget__feature--image latest-news-widget__feature--play-hover js-hp-feature" data-target="#videoModal{{ forloop.index }}" href="#" tabindex="-1" aira-hidden="false">
                       <div class="latest-news-widget__feature__tease__hgroup">
                         <span class="latest-news-widget__feature__tease__overline js-hp-feature-overline">{{ post.title }}</span>
                         <h3 class="latest-news-widget__feature__tease__h"><span class="latest-news-widget__hspan--word-break js-hp-feature-tease-link">{{ post.article_lead }}</span></h3>
@@ -41,7 +41,7 @@
                   {% endif %}
                 {% else %}
                   {% if post.video_content == true %}
-                    <a data-frame="iframe" data-theVideo="https://www.youtube.com/embed/{{ post.video_link | remove: "https://youtu.be/" }}" data-toggle="modal" id="jsNewsLink{{ forloop.index }}" class="latest-news-widget__feature latest-news-widget__feature--image latest-news-widget__feature--play-hover js-hp-feature" data-target="#videoModal{{ forloop.index }}" href="#" tabindex="-1" aira-hidden="true">
+                    <a data-frame="iframe" data-video="https://www.youtube.com/embed/{{ post.video_link | remove: "https://youtu.be/" }}" data-toggle="modal" id="jsNewsLink{{ forloop.index }}" class="newsHeader-video-link latest-news-widget__feature latest-news-widget__feature--image latest-news-widget__feature--play-hover js-hp-feature" data-target="#videoModal{{ forloop.index }}" href="#" tabindex="-1" aira-hidden="true">
                       <div class="latest-news-widget__feature__tease__hgroup">
                         <span class="latest-news-widget__feature__tease__overline js-hp-feature-overline">{{ post.title }}</span>
                         <h3 class="latest-news-widget__feature__tease__h"><span class="latest-news-widget__hspan--word-break js-hp-feature-tease-link">{{ post.article_lead }}</span></h3>
@@ -83,7 +83,7 @@
                   {% if post.video_content == true %}
                     <li class="latest-news-widget__latest__tease latest-news-widget__latest__tease--default latest-news-widget__latest__tease--has-image">
                 <!--  Tease is active   -->
-                      <a data-frame="iframe" data-theVideo="https://www.youtube.com/embed/{{ post.video_link | remove: "https://youtu.be/" }}" data-toggle="modal" id="jsTeaseLink{{ forloop.index }}" class="latest-news-widget__latest__tease__link js-hp-latest-tease-link tease-is-active" data-target="#videoModal{{ forloop.index }}" href="#" data-image="https://img.youtube.com/vi/{{  post.video_link | remove: "https://youtu.be/" }}/hqdefault.jpg"
+                      <a data-frame="iframe" data-video="https://www.youtube.com/embed/{{ post.video_link | remove: "https://youtu.be/" }}" data-toggle="modal" id="jsTeaseLink{{ forloop.index }}" class="newsHeader-video-link latest-news-widget__latest__tease__link js-hp-latest-tease-link tease-is-active" data-target="#videoModal{{ forloop.index }}" href="#" data-image="https://img.youtube.com/vi/{{  post.video_link | remove: "https://youtu.be/" }}/hqdefault.jpg"
                         data-image-alt="" tabindex="0" data-tease-type="" data-index="{{ forloop.index0 }}" aria-hidden="true">
                         <div class="latest-news-widget__latest__tease__hgroup">
                           <h3 class="latest-news-widget__latest__tease__overline typography__latest-news-widget__rollup-list-h">
@@ -112,7 +112,7 @@
                 {% else %}
                   {% if post.video_content == true %}
                     <li class="latest-news-widget__latest__tease latest-news-widget__latest__tease--default latest-news-widget__latest__tease--has-image">
-                      <a data-frame="iframe" data-theVideo="https://www.youtube.com/embed/{{ post.video_link | remove: "https://youtu.be/" }}" data-toggle="modal" id="jsTeaseLink{{ forloop.index }}" class="latest-news-widget__latest__tease__link js-hp-latest-tease-link" data-target="#videoModal{{ forloop.index }}" href="#" data-image="https://img.youtube.com/vi/{{  post.video_link | remove: "https://youtu.be/" }}/hqdefault.jpg"
+                      <a data-frame="iframe" data-video="https://www.youtube.com/embed/{{ post.video_link | remove: "https://youtu.be/" }}" data-toggle="modal" id="jsTeaseLink{{ forloop.index }}" class="newsHeader-video-link latest-news-widget__latest__tease__link js-hp-latest-tease-link" data-target="#videoModal{{ forloop.index }}" href="#" data-image="https://img.youtube.com/vi/{{  post.video_link | remove: "https://youtu.be/" }}/hqdefault.jpg"
                         data-image-alt="" tabindex="0" data-tease-type="" data-index="{{ forloop.index0 }}" aria-hidden="true">
                         <div class="latest-news-widget__latest__tease__hgroup">
                           <h3 class="latest-news-widget__latest__tease__overline typography__latest-news-widget__rollup-list-h">
