--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -5,7 +5,7 @@ layout: default
 <main class="position__offset-fixed-nav">
   <div class="container">
     <div class="row">
-      <div class="col">
+      <div class="col post__content">
         <h3 class="typography__h3">{{ page.title }}</h3>
         <p><strong>Posted On: {{ page.date | date: "%m/%d/%y" }}</strong></p>
 
