--- a/assets/scss/3-layout/_content.scss
+++ b/assets/scss/3-layout/_content.scss
@@ -1,15 +1,23 @@
 img.float-image-left {
-  float: left;
   max-width: 100%;
   height: auto;
-  margin: 10px;
 }
 
 img.float-image-right {
-  float: right;
   max-width: 100%;
   height: auto;
-  margin: 10px;
+}
+
+@media screen and (min-width: 992px) {
+  img.float-image-left {
+    float: left;
+    margin: 10px;
+  }
+
+  img.float-image-right {
+    float: right;
+    margin: 10px;
+  }
 }
 
 img.no-float {
