--- a/assets/scss/main.scss
+++ b/assets/scss/main.scss
@@ -24,7 +24,7 @@
 // Layout items
 // @import "3-layout/...";
 @import '3-layout/positioning';
-@import '3-layout/posts';
+@import '3-layout/post';
 
 // Page specific styling
 // @import "4-pages/...";
