--- a/_includes/emergency-alert.html
+++ b/_includes/emergency-alert.html
@@ -3,7 +3,7 @@
     <div class="col">
       <div class="alert alert-warning">
         <p class="typography__alert mb-0">
-          <strong>Alert:</strong> All KCC facilities will be closed March 18-30. Credit classes will be online through the end of the Spring 2020 semester. <a href="https://coronavirus.kcc.edu/" target="_blank" rel="noopener noreferrer">coronavirus.kcc.edu</a> has&nbsp;details.
+          <strong>Alert:</strong> All KCC facilities are closed. Credit classes will be online through the end of the Spring 2020 semester. <a href="https://coronavirus.kcc.edu/" target="_blank" rel="noopener noreferrer">coronavirus.kcc.edu</a> has&nbsp;details.
         </p>
       </div>
     </div>
