--- a/_includes/latest-news-widget.html
+++ b/_includes/latest-news-widget.html
@@ -17,7 +17,7 @@
             {% for post in current_posts limit:4 %}
 
                 {% if forloop.first == true %}
-                  {% if post.video_content == true %}
+                  {% if post.video_link and post.video_link != "" %}
                     <a data-frame="iframe" data-video="https://www.youtube.com/embed/{{ post.video_link | remove: "https://youtu.be/" }}" data-toggle="modal" id="jsNewsLink{{ forloop.index }}" class="newsHeader-video-link latest-news-widget__feature latest-news-widget__feature--image latest-news-widget__feature--play-hover js-hp-feature" data-target="#videoModal{{ forloop.index }}" href="#" tabindex="-1" aira-hidden="false">
                       <div class="latest-news-widget__feature__tease__hgroup">
                         <span class="latest-news-widget__feature__tease__overline js-hp-feature-overline">{{ post.title }}</span>
@@ -40,7 +40,7 @@
                     </a>
                   {% endif %}
                 {% else %}
-                  {% if post.video_content == true %}
+                  {% if post.video_link and post.video_link != '' %}
                     <a data-frame="iframe" data-video="https://www.youtube.com/embed/{{ post.video_link | remove: "https://youtu.be/" }}" data-toggle="modal" id="jsNewsLink{{ forloop.index }}" class="newsHeader-video-link latest-news-widget__feature latest-news-widget__feature--image latest-news-widget__feature--play-hover js-hp-feature" data-target="#videoModal{{ forloop.index }}" href="#" tabindex="-1" aira-hidden="true">
                       <div class="latest-news-widget__feature__tease__hgroup">
                         <span class="latest-news-widget__feature__tease__overline js-hp-feature-overline">{{ post.title }}</span>
@@ -80,7 +80,7 @@
             {% for post in current_posts limit:4 %}
 
                 {% if forloop.first == true %}
-                  {% if post.video_content == true %}
+                  {% if post.video_link and post.video_link != '' %}
                     <li class="latest-news-widget__latest__tease latest-news-widget__latest__tease--default latest-news-widget__latest__tease--has-image">
                 <!--  Tease is active   -->
                       <a data-frame="iframe" data-video="https://www.youtube.com/embed/{{ post.video_link | remove: "https://youtu.be/" }}" data-toggle="modal" id="jsTeaseLink{{ forloop.index }}" class="newsHeader-video-link latest-news-widget__latest__tease__link js-hp-latest-tease-link tease-is-active" data-target="#videoModal{{ forloop.index }}" href="#" data-image="https://img.youtube.com/vi/{{  post.video_link | remove: "https://youtu.be/" }}/hqdefault.jpg"
@@ -110,7 +110,7 @@
                     </li>
                   {% endif %}
                 {% else %}
-                  {% if post.video_content == true %}
+                  {% if post.video_link and post.video_link != '' %}
                     <li class="latest-news-widget__latest__tease latest-news-widget__latest__tease--default latest-news-widget__latest__tease--has-image">
                       <a data-frame="iframe" data-video="https://www.youtube.com/embed/{{ post.video_link | remove: "https://youtu.be/" }}" data-toggle="modal" id="jsTeaseLink{{ forloop.index }}" class="newsHeader-video-link latest-news-widget__latest__tease__link js-hp-latest-tease-link" data-target="#videoModal{{ forloop.index }}" href="#" data-image="https://img.youtube.com/vi/{{  post.video_link | remove: "https://youtu.be/" }}/hqdefault.jpg"
                         data-image-alt="" tabindex="0" data-tease-type="" data-index="{{ forloop.index0 }}" aria-hidden="true">
