Move more archived post images to `cdn.kcc.edu/newsroom/2019`. Adjust archive styling...
- Move more images out of the newsroom project and into `https://cdn.kcc.edu/newsroom/2019/`
- Adjust archive list and archived post styling:
  - Make visited archive links a dark purple
  - At the top of the post layout, center the featured image inside it's cropping parent elemement.

--- a/assets/scss/0-tools/_vars.scss
+++ b/assets/scss/0-tools/_vars.scss
@@ -44,6 +44,7 @@ $btn-primary-border: #003773;
 $btn-hover-bg: #022b55;
 $btn-hover-border: #021e3d;
 $darker-link: #006ce0;
+$color-archive-visited: #570099;
 
 html,
 body {
