Close `<figure>` element. Make ficaption styling the same as paragraph styling.

--- a/assets/scss/main.scss
+++ b/assets/scss/main.scss
@@ -7,6 +7,8 @@
 @import '1-base/links';
 @import '1-base/buttons';
 @import '1-base/background';
+@import '1-base/figures';
+
 
 // Modular components
 @import '2-modules/header';
